working on reducer fixing z-index

--- a/styles/_fashionPage.scss
+++ b/styles/_fashionPage.scss
@@ -21,6 +21,18 @@
   }
   .featured-image {
     width: 60%;
+    z-index: 1;
+  }
+  .featured-image::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 65%;
+    border: solid #3e4146 2px;
+    position: relative;
+    top: -60%;
+    left: 10%;
+    z-index: -1;
   }
 }
 
@@ -75,6 +87,26 @@
   justify-content: space-between;
   align-items: center;
   width: 40%;
+}
+.color-btn {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background: #222;
+  margin-right: 0.5rem;
+  border: none;
+  cursor: pointer;
+  opacity: 0.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.active {
+  opacity: 1;
+}
+.colors {
+  display: flex;
 }
 
 @media (min-width: 40rem) {
